Add login with password

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         <p>You have to login first before you play the game</p>
         <form method="post" action="/login">
             <input type="email" name="email" placeholder="Enter your email">
+            <input type="password" name="password" placeholder="Enter your password" />
             <br>
 
             <button type="submit">Login</button>
